# Stripe-API-FastAPI

./: README.md
backend/: .env  main.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
